# macjarvis

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  taskfile.yaml
.claude/commands/: jarvis.md
src/: agent.py
src/core/: config.py  database.py  jarvis_state.py
src/dashboard/: app.py
src/dashboard/routes/: api.py  chat.py  emails.py  index.py  tasks.py
src/dashboard/static/: dashboard.js  style.css
src/dashboard/templates/: base.html  chat.html  emails.html  index.html  tasks.html
src/integrations/calendar/: client.py  voice_tools.py
src/integrations/discord/: bot.py  voice.py  voice_tools.py
src/integrations/gmail/: client.py  voice_tools.py
src/integrations/slack/: bot.py  client.py  voice_tools.py
src/workers/: email_summariser.py  morning_briefing.py  presence_monitor.py  subagent_runner.py
tests/: test_agent.py
